--- a/flex/01-flex-center/style.css
+++ b/flex/01-flex-center/style.css
@@ -3,10 +3,14 @@
   border: 4px solid midnightblue;
   width: 400px;
   height: 300px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
 }
 
 .box {
-  background: palevioletred;
+  background: rgb(221, 221, 221);
   font-weight: bold;
   text-align: center;
   border: 6px solid maroon;
