--- a/flex/05-flex-modal/style.css
+++ b/flex/05-flex-modal/style.css
@@ -20,6 +20,17 @@ body {
   width: 480px;
   border-radius: 10px;
   box-shadow: 2px 4px 16px rgba(0,0,0,.2);
+  padding: 16px;
+  display: flex;
+  gap: 16px;
+}
+.header {
+  display: flex;
+  justify-content: space-between;
+  font-weight: 800;
+  margin-bottom: 8px;
+  font-size: 20px;
+  align-items: center;
 }
 
 .icon {
@@ -33,7 +44,9 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-shrink: 0;
 }
+
 
 .close-button {
   background: #eee;
@@ -49,7 +62,9 @@ body {
   border: 1px solid #eee;
   padding: 0;
 }
-
+.text {
+  margin-bottom: 16px;
+}
 button {
   cursor: pointer;
   padding: 8px 16px;
