--- a/flex/06-flex-layout/style.css
+++ b/flex/06-flex-layout/style.css
@@ -5,6 +5,9 @@ body {
   margin: 0;
   overflow: hidden;
   font-family: Roboto, sans-serif;
+  display: flex;
+  flex-direction: column;
+
 }
 
 img {
@@ -16,6 +19,7 @@ button {
   border: none;
   border-radius: 8px;
   background: #eee;
+  padding: 10px;
 }
 
 input {
@@ -24,3 +28,37 @@ input {
   padding: 8px 24px;
   width: 400px;
 }
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  gap: 15px;
+  display: flex;
+
+}
+a {
+  text-decoration: none;
+  color: #666;
+}
+.header {
+  display: flex;
+  justify-content: space-between;
+  padding: 16px;
+}
+.footer {
+  display: flex;
+  justify-content: space-between;
+  padding: 16px;
+  background-color: #e2e1e1;
+}
+.content {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  gap: 15px;
+  flex: 1;
+
+}
+
+
